fix deprecated new Boolean(String) to Boolean.valueOf(String)